sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:11: error: type mismatch;
 found   : Int
 required: Nothing
    playersColor += getPlayerColor(i, 0)
                                  ^NaiveBaseball:12: error: type mismatch;
 found   : Int
 required: Nothing
    playersColor += getPlayerColor(i, 1)
                                  ^